--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,5 +1,6 @@
 {
   "compilerOptions": {
+    "baseUrl": ".",  // This is necessary to define the base path
     "paths": {
       "@/*": ["./src/*"]
     }
