--- a/package.json
+++ b/package.json
@@ -9,23 +9,23 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@radix-ui/react-separator": "^1.1.0",
+    "@radix-ui/react-separator": "1.1.8",
     "@shadcn/ui": "^0.0.4",
-    "@supabase/supabase-js": "^2.46.1",
-    "class-variance-authority": "^0.7.0",
+    "@supabase/supabase-js": "2.86.2",
+    "class-variance-authority": "0.7.1",
     "clsx": "^2.1.1",
-    "lucide-react": "^0.456.0",
-    "next": "15.0.3",
-    "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106",
-    "react-icons": "^5.3.0",
-    "tailwind-merge": "^2.5.4",
+    "lucide-react": "0.556.0",
+    "next": "15.0.4",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "react-icons": "5.5.0",
+    "tailwind-merge": "3.4.0",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
-    "eslint": "^8",
-    "eslint-config-next": "15.0.3",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1"
+    "eslint": "8.57.1",
+    "eslint-config-next": "15.0.4",
+    "postcss": "8.5.6",
+    "tailwindcss": "3.4.18"
   }
 }
