--- a/package.json
+++ b/package.json
@@ -9,18 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@radix-ui/react-separator": "1.1.8",
-    "@shadcn/ui": "^0.0.4",
-    "@supabase/supabase-js": "2.86.2",
-    "class-variance-authority": "0.7.1",
-    "clsx": "^2.1.1",
-    "lucide-react": "0.556.0",
+    "@supabase/supabase-js": "^2.39.0",
     "next": "16.0.7",
     "react": "18.3.1",
-    "react-dom": "18.3.1",
-    "react-icons": "5.5.0",
-    "tailwind-merge": "3.4.0",
-    "tailwindcss-animate": "^1.0.7"
+    "react-dom": "18.3.1"
   },
   "devDependencies": {
     "eslint": "9.13.0",
